css/style.css
/* --- Fonts --- */

@font-face {
    font-family: 'Raleway';
    src: url('../fonts/Raleway-Light.eot');
    src: url('../fonts/Raleway-Light.eot?#iefix') format('embedded-opentype'),
        url('../fonts/Raleway-Light.woff2') format('woff2'),
        url('../fonts/Raleway-Light.woff') format('woff'),
        url('../fonts/Raleway-Light.ttf') format('truetype'),
        url('../fonts/Raleway-Light.svg#Raleway-Light') format('svg');
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: 'Raleway';
    src: url('../fonts/Raleway-LightItalic.eot');
    src: url('../fonts/Raleway-LightItalic.eot?#iefix') format('embedded-opentype'),
        url('../fonts/Raleway-LightItalic.woff2') format('woff2'),
        url('../fonts/Raleway-LightItalic.woff') format('woff'),
        url('../fonts/Raleway-LightItalic.ttf') format('truetype'),
        url('../fonts/Raleway-LightItalic.svg#Raleway-LightItalic') format('svg');
    font-weight: 300;
    font-style: italic;
}

@font-face {
    font-family: 'Raleway';
    src: url('../fonts/Raleway-Medium.eot');
    src: url('../fonts/Raleway-Medium.eot?#iefix') format('embedded-opentype'),
        url('../fonts/Raleway-Medium.woff2') format('woff2'),
        url('../fonts/Raleway-Medium.woff') format('woff'),
        url('../fonts/Raleway-Medium.ttf') format('truetype'),
        url('../fonts/Raleway-Medium.svg#Raleway-Medium') format('svg');
    font-weight: 500;
    font-style: normal;
}

@font-face {
    font-family: 'Raleway';
    src: url('../fonts/Raleway-MediumItalic.eot');
    src: url('../fonts/Raleway-MediumItalic.eot?#iefix') format('embedded-opentype'),
        url('../fonts/Raleway-MediumItalic.woff2') format('woff2'),
        url('../fonts/Raleway-MediumItalic.woff') format('woff'),
        url('../fonts/Raleway-MediumItalic.ttf') format('truetype'),
        url('../fonts/Raleway-MediumItalic.svg#Raleway-MediumItalic') format('svg');
    font-weight: 500;
    font-style: italic;
}

@font-face {
    font-family: 'Playfair';
    src: url('../fonts/PlayfairDisplay-Regular.eot');
    src: url('../fonts/PlayfairDisplay-Regular.eot?#iefix') format('embedded-opentype'),
        url('../fonts/PlayfairDisplay-Regular.woff2') format('woff2'),
        url('../fonts/PlayfairDisplay-Regular.woff') format('woff'),
        url('../fonts/PlayfairDisplay-Regular.ttf') format('truetype'),
        url('../fonts/PlayfairDisplay-Regular.svg#PlayfairDisplay-Regular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Playfair';
    src: url('../fonts/PlayfairDisplay-BoldItalic.eot');
    src: url('../fonts/PlayfairDisplay-BoldItalic.eot?#iefix') format('embedded-opentype'),
        url('../fonts/PlayfairDisplay-BoldItalic.woff2') format('woff2'),
        url('../fonts/PlayfairDisplay-BoldItalic.woff') format('woff'),
        url('../fonts/PlayfairDisplay-BoldItalic.ttf') format('truetype'),
        url('../fonts/PlayfairDisplay-BoldItalic.svg#PlayfairDisplay-BoldItalic') format('svg');
    font-weight: bold;
    font-style: italic;
}

@font-face {
    font-family: 'Playfair';
    src: url('../fonts/PlayfairDisplay-Bold.eot');
    src: url('../fonts/PlayfairDisplay-Bold.eot?#iefix') format('embedded-opentype'),
        url('../fonts/PlayfairDisplay-Bold.woff2') format('woff2'),
        url('../fonts/PlayfairDisplay-Bold.woff') format('woff'),
        url('../fonts/PlayfairDisplay-Bold.ttf') format('truetype'),
        url('../fonts/PlayfairDisplay-Bold.svg#PlayfairDisplay-Bold') format('svg');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'Playfair';
    src: url('../fonts/PlayfairDisplay-Italic.eot');
    src: url('../fonts/PlayfairDisplay-Italic.eot?#iefix') format('embedded-opentype'),
        url('../fonts/PlayfairDisplay-Italic.woff2') format('woff2'),
        url('../fonts/PlayfairDisplay-Italic.woff') format('woff'),
        url('../fonts/PlayfairDisplay-Italic.ttf') format('truetype'),
        url('../fonts/PlayfairDisplay-Italic.svg#PlayfairDisplay-Italic') format('svg');
    font-weight: normal;
    font-style: italic;
}

/* --- The Goods --- */
body {
    min-width: 400px;
}
header {
    width: 100%;
    height: 116px;
    position: fixed;
    top: 0px;
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-content: space-between;
    background: white;
    z-index: 1;
    box-shadow: 0 1px 4px lightgray;
}
nav {
    font-family: "Raleway";
    font-weight: 500;
    font-size: 14px;
}
h1{
    font-family: "playfair", serif;
    font-weight: normal;
    font-size: 40px;
    color: white;
    font-weight: normal;
    line-height: .95;
    text-shadow: 2px 2px 4px gray;
    text-align: center;
    padding: 20px 20px 100px 20px;
}
h2{
    font-family: "playfair", serif;
    font-weight: normal;
    font-style: italic;
    color: #2d2d2d;
    font-size: 30px;
    text-align: center;
    padding: 10px 0;
}
.subscribe h2 {
    color: white;
    text-shadow: 2px 2px 4px gray;
}
h3{
    font-family: "raleway", sans-serif;
    font-weight: "500";
    color: white;
    text-transform: uppercase;
    text-align: center;
    padding-top: 150px;
    text-shadow: 2px 2px 4px gray;
}
p {
    color: #2d2d2d;
    font-family: "raleway", sans-serif;
    font-weight: 300;
    font-size: 14px;
    line-height: 2;
    font-weight: light;
    text-align: center;
}
.subscribe p{
    color: white;
}
ul {
    list-style: none;
}
li {
    display: inline-block;
}
.container {
    margin: 0 auto;
}
.bold{
    font-family: "playfair";
    font-weight: bold;
    font-style: normal;
}
.logo {
    margin: 10px auto 10px 10px;
}
.cart-icon{
    margin: 10px 10px 10px auto;
}
.menu {
    color: #e2574c;
    text-transform: uppercase;
    margin: 0 auto;
    padding: 16px 35px;
    border-top: 1px solid #d7d7d7;
}
.page {
    margin: 0 10px;
    display: inline-block;
}
.hero {
    margin-top: 100px;
}
.feature {
    height: 405px;
    background:  linear-gradient(rgba(0,0,0,.25), rgba(0,0,0,.25)), 
    url(../images/banner-girl.png) no-repeat center 60px,
    url(../images/flower-bkgd.jpg);
    background-size: cover, 150px 369px, cover;
}
.blurb{
    margin: 30px;
}
.grid {
    display: grid;
    height: 200vw;
    width: 100%;
    grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr;
    grid-gap: 7px;
}
.grid div {
    display: flex;
    justify-content: center;
    align-items: center;
}
.grid-text {
    font-family: "raleway", sans-serif;
    font-size: 22px;
    font-weight: 500;
    color: white;
    text-shadow: 2px 2px 2px dimgray;
    text-transform: uppercase;
    text-align: center;
}
.mens {
    background: linear-gradient(rgba(0,0,0,.25), rgba(0,0,0,.25)), url(../images/mens-category.jpg);
    background-size: cover;
    grid-area: 1 / 1 / 2 / 3;
}
.trends {
    background: linear-gradient(rgba(0,0,0,.25), rgba(0,0,0,.25)), url(../images/trends-category.jpg);
    background-size: cover;
}
.glasses {
    background: linear-gradient(rgba(0,0,0,.25), rgba(0,0,0,.25)), url(../images/glasses-category.jpg);
    background-size: cover;
}
.sale {
    background: linear-gradient(rgba(0,0,0,.25), rgba(0,0,0,.25)), url(../images/sale-category.jpg);
    background-size: cover;
}
.bags {
    background: linear-gradient(rgba(0,0,0,.25), rgba(0,0,0,.25)), url(../images/bags-category.jpg);
    background-size: cover;
}
.womens {
    background: linear-gradient(rgba(0,0,0,.25), rgba(0,0,0,.25)), url(../images/womens-category.jpg);
    background-size: cover;
    grid-area: 4 / 1 / 5 / 3;
}
.carousel {
    height: 650px;
}
.carousel h2 {
    padding: 65px 0;
}
.carousel-cell {
    /* background-color: lightgreen; */
    margin: 0 auto;
    width: 100%;
    text-align: center;
}
.carousel-cell img {
    padding: 10px;
    margin: 0 auto;
}
.carousel-title {
    font-family: "playfair";
    font-size: 1.25rem;
    color: #e2574c;
}
.carousel-description {
    font-size: .7rem;
    color: #969696;
    text-transform: uppercase;
    font-weight: 500;
}
.carousel-price {
    color: #969696;
    text-transform: uppercase;
    font-weight: 500;
}
.subscribe {
    background: url(../images/wave-bkgd.jpg);
    background-size: cover;
    height: 250px;
    color: white;
    padding: 30px;
}
.subscriber-email {
    margin: 0 auto;
    position: relative;
    max-width: 450px;
}
.subscriber-email input {
    font-family: "raleway";
    font-weight: 300;
    display: block;
    border: none;
    border-radius: 22px;
    padding: 14px 20px;
    margin: 0 auto;
    width: 100%;
}
.subscriber-email button {
    font-family: "raleway";
    font-weight: 500;
    border: none;
    border-radius: 20px;
    background-color: #e2574c;
    color: white;
    padding: 11px 22px;
    margin: 2px;
    /* display: inline; */
    position: absolute;
    right: 1px;
    top: 1px;
    /* left: 1px; */
}
footer {
    background-color: #242424;
    color: white;

    margin-top: 8px;
    padding: 30px 0;
}
footer div.container {
    max-width: 1240px;
    display: flex;
    flex-direction: column;
}
.legal {
    font-family: "playfair";
    font-weight: normal;
    line-height: 1.5;
    color: white;
    margin-top: 30px;
}
.contact {
    font-family: "playfair";
    font-weight: normal;
    line-height: 1.5;
    color: #969696;
    padding-top: 20px;
}
.social {
    font-family: "raleway";
    font-weight: 300;
    padding: 25px;
    margin: 0 auto;
}
.fab {
    display: inline-block;
    width: 20px;
}
.social-words {
    display: none;
}

/* --- Tablet or Desktop Response --- */

@media all and (min-width: 600px) {

p {
    font-size: 16px;
}
    
/* --- Grid Response --- */

    .grid {
        height: 50vw;
        width: 100%;
        grid-template: 1fr 1fr / 1fr 1fr 1fr 1fr;
    }
    .mens {
        grid-area: 1 / 1 / 2 / 3;
    }
    .womens {
        grid-area: 2 / 3 / 3 / 5;
    }
/* --- Carousel Response --- */

.carousel-cell {
    width: 50%;
}

/* --- Footer Response --- */

    footer div.container {
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        padding: 0 20px;
    }
    .info p {
        text-align: left;
    }
    .social {
        margin: 0;
    }
    .social li {
        display: block;
        padding: 8px 0;
    }
    .social-words {
        display: inline;
    }
}

@media all and (min-width: 1240px) {
    
    .carousel-cell {
        width: 25%;
    }
}

